--- a/R/Rincon/Rincon.html
+++ b/R/Rincon/Rincon.html
@@ -12,18 +12,26 @@
   <h2>Lugares turísticos en Rincón</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Balneario de Rincón</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Balneario de Rincón es una hermosa y limpia playa que cuenta con paseo tablado, área verdes y gazebos en 
+      cemento perfectos para la celebración de actividades familiares. La playa queda a pasos del pueblo de Rincón es muy 
+      recomendada para pasar un día familiar.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Faro Punta Higüeras</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El faro de Rincón, Faro de Punta Higüera, fue construido en 1892 para cubrir la distancia entre otros dos faros en
+      la costa oeste de Puerto Rico. Desde 1993, el faro funciona como un parque recreativo con un museo marítimo, quioscos y
+      una plataforma de observación que mira hacia el Océano Atlántico. Dependiendo de la época del año, es posible que se produzcan 
+      avistamientos de ballenas. El faro está justo al lado de la playa Domes en Rincón, una playa de surfistas donde se realizan habitualmente 
+      competencias de surf.
     </p>
     Pueden visitar en:
     <p>
@@ -31,7 +39,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Playa de arena este</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
@@ -41,7 +49,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Maria's Beach</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
