--- a/R/Rincon/Rincon.html
+++ b/R/Rincon/Rincon.html
@@ -39,9 +39,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2>Playa de arena este</h2>
+    <h2>Playa Córcega</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La playa es perfecto para nadar, relajarse o disfrutar de una hermosa puesta de sol. 
+      La playa comienza en Tres Sirenas Inn al norte y se extiende más allá de Villa Antonio, Villa Cofresi y 
+      continúa hacia el sur por más de una milla. Más al sur, Córcega es conocida como la mejor playa para nadar en Rincón.
     </p>
     <p>
       Pueden visitar en:
@@ -52,6 +55,8 @@
     <h2>Maria's Beach</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Playa María es el corazón de la cultura surfera y playera de Rincón. También es parte de la Reserva Marina Tres Palmas y un 
+      excelente lugar para hacer snorkel cuando el oleaje es pequeño. Las actividades en la playa incluyen surf, surf de remo, kitesurf y esnórquel.
     </p>
     <p>
       Pueden visitar en:
@@ -73,9 +78,8 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiesta del Coco - Mayo</li>
+       <li>Fiestas Patronales de Santa Rosa de Lima - Agosto</li>
   </ul>
   </div>
 </body>
