--- a/R/Rincon/Rincon.html
+++ b/R/Rincon/Rincon.html
@@ -25,7 +25,10 @@
       </ul>
     </p>
     <h2>Faro Punta Higüeras</h2>
-    <img src="" width="80%" height="30%">
+    <img src="191-3-9777_jpeg0-879e631a5056a36_879e655d-5056-a36a-086896a1eecfa370.jpeg
+Go to file
+
+" width="80%" height="30%">
     <p class="text">
       El faro de Rincón, Faro de Punta Higüera, fue construido en 1892 para cubrir la distancia entre otros dos faros en
       la costa oeste de Puerto Rico. Desde 1993, el faro funciona como un parque recreativo con un museo marítimo, quioscos y
