--- a/R/Rincon/Rincon.html
+++ b/R/Rincon/Rincon.html
@@ -43,7 +43,7 @@ Go to file
       </ul>
     </p>
     <h2>Playa Córcega</h2>
-    <img src="" width="80%" height="30%">
+    <img src="475502ce-75a3-44b7-8ed3-501d13cb5cbd.jpeg" width="80%" height="30%">
     <p class="text">
       La playa es perfecto para nadar, relajarse o disfrutar de una hermosa puesta de sol. 
       La playa comienza en Tres Sirenas Inn al norte y se extiende más allá de Villa Antonio, Villa Cofresi y 
