--- a/R/Rincon/Rincon.html
+++ b/R/Rincon/Rincon.html
@@ -56,7 +56,7 @@ Go to file
       </ul>
     </p>
     <h2>Maria's Beach</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Marias_004.jpeg" width="80%" height="30%">
     <p class="text">
       Playa María es el corazón de la cultura surfera y playera de Rincón. También es parte de la Reserva Marina Tres Palmas y un 
       excelente lugar para hacer snorkel cuando el oleaje es pequeño. Las actividades en la playa incluyen surf, surf de remo, kitesurf y esnórquel.
