--- a/R/Rincon/Rincon.html
+++ b/R/Rincon/Rincon.html
@@ -13,15 +13,16 @@
 </div>
   <div class="Lugares">
     <h2>Balneario de Rincón</h2>
-    <img src="" width="80%" height="30%">
+    <img src="rincon_balneario.jpeg" width="80%" height="30%">
     <p class="text">
       Balneario de Rincón es una hermosa y limpia playa que cuenta con paseo tablado, área verdes y gazebos en 
       cemento perfectos para la celebración de actividades familiares. La playa queda a pasos del pueblo de Rincón es muy 
       recomendada para pasar un día familiar.
     </p>
     <p>
+      Pueden visitar el Balneario de Rincón en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fgNvBm9yRdHpgYLC7">8PRV+6Q8, Rincon, Rincón 00677</a></li>
       </ul>
     </p>
     <h2>Faro Punta Higüeras</h2>
@@ -36,10 +37,10 @@ Go to file
       avistamientos de ballenas. El faro está justo al lado de la playa Domes en Rincón, una playa de surfistas donde se realizan habitualmente 
       competencias de surf.
     </p>
-    Pueden visitar en:
+    Pueden visitar el faro Punta Higüeras en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/1DYmzFCXDJBWkPk48">9P6H+QMV, PR-4413, Aguada, Rincón 00677</a></li>
       </ul>
     </p>
     <h2>Playa Córcega</h2>
@@ -50,9 +51,9 @@ Go to file
       continúa hacia el sur por más de una milla. Más al sur, Córcega es conocida como la mejor playa para nadar en Rincón.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Playa Córcega en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/bYARuFGRmfdMX7Zi6">8Q75+482, PR-429, Rincon, Rincón 00677</a></li>
       </ul>
     </p>
     <h2>Maria's Beach</h2>
@@ -62,20 +63,20 @@ Go to file
       excelente lugar para hacer snorkel cuando el oleaje es pequeño. Las actividades en la playa incluyen surf, surf de remo, kitesurf y esnórquel.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar Maria's Beach en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/nT57VJRNWpRhqwaz8">9P4J+X7M, PR-4413, Aguada, Rincón 00602</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>La Cambija (787)-823-1118</li>
+    <li>Cowboys Cantina & Outside Grill (787)-370-5835</li>
+    <li>La copa llena (787)-823-0896</li>
+    <li>De Boca's (787)-944-4457</li>
+    <li>Parrilleria Vacas Gauchas (787)-529-1200</li>
   </ul>
   </div>
   <h2>Eventos</h2>
