--- a/R/RioGrande/RioGrande.html
+++ b/R/RioGrande/RioGrande.html
@@ -12,18 +12,30 @@
   <h2>Lugares turísticos en Rio Grande</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>La Paseadora Río Espíritu Santo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Un paseo en bote perfecto para la navegación del único río en Puerto Rico que es lo suficientemente seguro para navegar.
+      El Río Espíritu Santo comienza en lo alto de la selva tropical de El Yunque, donde puedes jugar en cascadas y ver petroglifos.
+      Corre montaña abajo por millas, 
+      se aplana y eventualmente llega al Océano Atlántico.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>El Yunque </h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Este tesoro natural es un excelente destino si quieres sumergirte en la naturaleza. Puedes visitarlo para hacer una caminata 
+      por uno de sus muchos senderos, bañarte en piscinas naturales debajo de cascadas o relajarte y disfrutar del paisaje.
+<br>
+El Yunque es la única selva tropical en el Servicio Forestal Nacional de los EE. UU., y su nombre es una referencia a Yuke, lo que los
+      indígenas taínos definieron como "tierras blancas".
+<br>
+Con una precipitación promedio de 120 pulgadas al año, El Yunque tiene un ecosistema muy diverso que alberga cientos de especies únicas de 
+      plantas y animales, incluida la famosa rana coquí de la isla.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +43,11 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Rainforest Zipline Park</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      The longest zipline in the area – over 2300 ft! Zip through eight lines, between trees and over the canopy level of the trees,
+      using double cable, witnessing the stunning rainforest scenery.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +55,16 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Torre Britton</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Construida de piedra, la torre fue construida por Civilian Conservation Corps en 1937-38, convirtiéndose en la más alta de las
+      torres de Civilian Conservation Corp construidas con mampostería de piedra. En un día despejado, la plataforma de observación de la 
+      torre le brinda al excursionista afortunado una vista panorámica del bosque circundante, el Océano Atlántico, el Mar Caribe y la llanura 
+      costera del sureste y noreste.
+
+Mt. Britton Tower se encuentra dentro de la selva tropical El Yunque. Para llegar a él, deberá hacer una caminata de 1,3 km que toma alrededor
+      de 45 minutos (ida y vuelta).
     </p>
     <p>
       Pueden visitar en:
