--- a/R/RioGrande/RioGrande.html
+++ b/R/RioGrande/RioGrande.html
@@ -56,7 +56,7 @@ Con una precipitación promedio de 120 pulgadas al año, El Yunque tiene un ecos
       </ul>
     </p>
     <h2>Torre Britton</h2>
-    <img src="" width="80%" height="30%">
+    <img src="157728948_2762888307296894_1093567175310979436_n.jpeg" width="80%" height="30%">
     <p class="text">
       Construida de piedra, la torre fue construida por Civilian Conservation Corps en 1937-38, convirtiéndose en la más alta de las
       torres de Civilian Conservation Corp construidas con mampostería de piedra. En un día despejado, la plataforma de observación de la 
