--- a/R/RioGrande/RioGrande.html
+++ b/R/RioGrande/RioGrande.html
@@ -44,7 +44,7 @@ Con una precipitación promedio de 120 pulgadas al año, El Yunque tiene un ecos
       </ul>
     </p>
     <h2>Rainforest Zipline Park</h2>
-    <img src="" width="80%" height="30%">
+    <img src="IMG_6445-CYNTHIA_4465EA10-C0B9-4783-8DBBA39E60BF8A2F_2a19db30-8a74-466e-8db1906ef9f4639c.jpeg" width="80%" height="30%">
     <p class="text">
       The longest zipline in the area – over 2300 ft! Zip through eight lines, between trees and over the canopy level of the trees,
       using double cable, witnessing the stunning rainforest scenery.
