--- a/R/RioGrande/RioGrande.html
+++ b/R/RioGrande/RioGrande.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>La Paseadora Río Espíritu Santo</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Paseadora-1_9A07FA61-5056-A36A-08F8104E483941B9-9a07f9695056a36_9a07faeb-5056-a36a-08dcd868e332e5eb.jpeg" width="80%" height="30%">
     <p class="text">
       Un paseo en bote perfecto para la navegación del único río en Puerto Rico que es lo suficientemente seguro para navegar.
       El Río Espíritu Santo comienza en lo alto de la selva tropical de El Yunque, donde puedes jugar en cascadas y ver petroglifos.
