--- a/R/RioGrande/RioGrande.html
+++ b/R/RioGrande/RioGrande.html
@@ -21,12 +21,13 @@
       se aplana y eventualmente llega al Océano Atlántico.
     </p>
     <p>
+      Pueden visitar La Paseadora Río Espíritu Santo en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/PDChZSnnKtZ7bP2c9">95GJ+55 Río Grande</a></li>
       </ul>
     </p>
     <h2>El Yunque </h2>
-    <img src="" width="80%" height="30%">
+    <img src="el-yunque-1-scaled.jpeg.webp" width="80%" height="30%">
     <p class="text">
       Este tesoro natural es un excelente destino si quieres sumergirte en la naturaleza. Puedes visitarlo para hacer una caminata 
       por uno de sus muchos senderos, bañarte en piscinas naturales debajo de cascadas o relajarte y disfrutar del paisaje.
@@ -37,10 +38,10 @@ El Yunque es la única selva tropical en el Servicio Forestal Nacional de los EE
 Con una precipitación promedio de 120 pulgadas al año, El Yunque tiene un ecosistema muy diverso que alberga cientos de especies únicas de 
       plantas y animales, incluida la famosa rana coquí de la isla.
     </p>
-    Pueden visitar en:
+    Pueden visitar El Yunque en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/PRqNDn8p3SjrnA3f9">8665+6F Palmer, Río Grande</a></li>
       </ul>
     </p>
     <h2>Rainforest Zipline Park</h2>
@@ -50,9 +51,9 @@ Con una precipitación promedio de 120 pulgadas al año, El Yunque tiene un ecos
       using double cable, witnessing the stunning rainforest scenery.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Rainforest Zipline Park en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/p5QQ7eP6ihK6aLqd6">Road 191, km 1.1, Rio Grande, PR 00745, United</a></li>
       </ul>
     </p>
     <h2>Torre Britton</h2>
@@ -67,28 +68,27 @@ Mt. Britton Tower se encuentra dentro de la selva tropical El Yunque. Para llega
       de 45 minutos (ida y vuelta).
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Torre Britton en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/VJEwpahSc9rUqKj79">8624+9P5, Río Grande 00745</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>El Verde BBQ (787)-887-0958</li>
+    <li>La Resaca (939)-220-2008</li>
+    <li>Los Cuajos de Rio Grande (787)-596-6496</li>
+    <li>El Rey del Mofongo (787)-585-3752</li>
+    <li>CJ'S PAPATóN (787)-538-8088</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiestas de la Cruz - Mayo</li>
+    <li>Fiestas Patronales de Nuestra Sra. del carmen - julio</li>
   </ul>
   </div>
 </body>
