--- a/S/SabanaGrande/SabanaGrande.html
+++ b/S/SabanaGrande/SabanaGrande.html
@@ -12,18 +12,21 @@
   <h2>Lugares turísticos en Sabana Grande</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Casa de Piedra</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta joya arquitectónica fue construida en el Bosque Estatal de Maricao durante la década de 1930 como parte del Cuerpo Civil de
+      Conservación del presidente Roosevelt.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Area Recreativa Orlando López Martínez</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Hermosa zona boscosa en la zona sur de la isla, un parque bastante tranquilo y alejado del ruido para descansar del ajetreo citadino.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +34,11 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Bosque Estatal de Susua</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Ubicado en las afueras de la cordillera central de Puerto Rico, el Bosque Estatal de Susúa se extiende a través de los pueblos de Yauco y 
+      Sabana Grande. El bosque cuenta con un centro de visitantes, áreas limitadas para acampar e instalaciones para visitantes.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +46,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Santuario Virgen del Rosario del Pozo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La Misión de la Virgen del Rosario del Pozo se presenta como un movimiento de la Iglesia católica, cuenta con varones y 
+      mujeres que se presentan como sacerdotes y religiosas, tiene rituales semejantes a los de la Iglesia Católica, realiza apostolado en 
+      Puerto Rico, México, Ecuador, Costa Rica y Estados Unidos.
     </p>
     <p>
       Pueden visitar en:
