--- a/S/SabanaGrande/SabanaGrande.html
+++ b/S/SabanaGrande/SabanaGrande.html
@@ -24,7 +24,7 @@
       </ul>
     </p>
     <h2>Area Recreativa Orlando López Martínez</h2>
-    <img src="" width="80%" height="30%">
+    <img src="20180725_104533.jpeg" width="80%" height="30%">
     <p class="text">
       Hermosa zona boscosa en la zona sur de la isla, un parque bastante tranquilo y alejado del ruido para descansar del ajetreo citadino.
     </p>
