--- a/S/SabanaGrande/SabanaGrande.html
+++ b/S/SabanaGrande/SabanaGrande.html
@@ -47,7 +47,7 @@
       </ul>
     </p>
     <h2>Santuario Virgen del Rosario del Pozo</h2>
-    <img src="" width="80%" height="30%">
+    <img src="2020-12-01.jpeg" width="80%" height="30%">
     <p class="text">
       La Misión de la Virgen del Rosario del Pozo se presenta como un movimiento de la Iglesia católica, cuenta con varones y 
       mujeres que se presentan como sacerdotes y religiosas, tiene rituales semejantes a los de la Iglesia Católica, realiza apostolado en 
