--- a/S/SabanaGrande/SabanaGrande.html
+++ b/S/SabanaGrande/SabanaGrande.html
@@ -35,7 +35,7 @@
       </ul>
     </p>
     <h2>Bosque Estatal de Susua</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Bosque_Estatal_Susua_Sabana_Grande_Puerto_Rico3_0.png" width="80%" height="30%">
     <p class="text">
       Ubicado en las afueras de la cordillera central de Puerto Rico, el Bosque Estatal de Susúa se extiende a través de los pueblos de Yauco y 
       Sabana Grande. El bosque cuenta con un centro de visitantes, áreas limitadas para acampar e instalaciones para visitantes.
