--- a/S/SabanaGrande/SabanaGrande.html
+++ b/S/SabanaGrande/SabanaGrande.html
@@ -13,22 +13,23 @@
 </div>
   <div class="Lugares">
     <h2>Casa de Piedra</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Casa_de_Piedra_(Maricao,_PR).jpeg" width="80%" height="30%">
     <p class="text">
       Esta joya arquitectónica fue construida en el Bosque Estatal de Maricao durante la década de 1930 como parte del Cuerpo Civil de
       Conservación del presidente Roosevelt.
     </p>
     <p>
+      Pueden visitar la Casa de Piedra en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2>Area Recreativa Orlando López Martínez</h2>
+    <h2>Área Recreativa Orlando López Martínez</h2>
     <img src="20180725_104533.jpeg" width="80%" height="30%">
     <p class="text">
       Hermosa zona boscosa en la zona sur de la isla, un parque bastante tranquilo y alejado del ruido para descansar del ajetreo citadino.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Área Recreativa Orlando López Martínez en:
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
@@ -41,7 +42,7 @@
       Sabana Grande. El bosque cuenta con un centro de visitantes, áreas limitadas para acampar e instalaciones para visitantes.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Bosque Estatal de Susua en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
@@ -54,7 +55,7 @@
       Puerto Rico, México, Ecuador, Costa Rica y Estados Unidos.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Santuario Virgen del Rosario del Pozo en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
