--- a/S/Salinas/Salinas.html
+++ b/S/Salinas/Salinas.html
@@ -12,18 +12,26 @@
   <h2>Lugares turísticos en Salinas</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>La Curva del Árbol</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Es un área para pasar un rato disfrutando de unas hermosas vistas hacia las Tetas de Cayey, la Cordillera Central y el Mar Caribe.
+      Esta área es muy concurrida por personas que desean tirarse fotos en sus bancos, decorados con la bandera de Puerto Rico, o en su famoso 
+      columpio que cuelga de un hermoso flamboyán. 
+      Hay que tener cuidado, especialmente con los niños, ya que está al borde de una montaña. En nuestra visita en diciembre, el viento y el 
+      frio era sumamente notable.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Cerro las Tetas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta formación geológica, conocida entre los lugareños como las Tetas de Cayey por su parecido con un par de senos 
+      que emergen del suelo, es una reserva natural designada y punto de acceso para los buscadores de aventuras. 
+      Las montañas miden alrededor de 841 metros, y varias compañías locales ofrecen escalada en roca, caminatas y oportunidades de acampar. 
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +39,13 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Albergue Olímpico Germán Rieckehoff</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Este es el centro deportivo más grande de Puerto Rico y ofrece 40 instalaciones diferentes para una amplia gama de disciplinas, 
+      desde fútbol hasta levantamiento de pesas y artes marciales. En verano se convierte en un parque acuático llamado Olímpico, con atracciones
+      para toda la familia como piscinas, piscinas de olas y toboganes. 
+      El Albergue Olímpico también tiene un museo olímpico que muestra los logros atléticos de los puertorriqueños. 
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +53,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Autódromo Internacional de Puerto Rico (Pista de Salinas) </h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Para los fanáticos de las carreras de autos, la pista de carreras es algo que no deben perderse. 
+      Allí, pueden ver varios eventos, incluyendo aceleración, 
+      circuito para autos y lanchas y Go-Karts, en un ambiente seguro (pero emocionante).
     </p>
     <p>
       Pueden visitar en:
