--- a/S/Salinas/Salinas.html
+++ b/S/Salinas/Salinas.html
@@ -27,7 +27,7 @@
       </ul>
     </p>
     <h2>Cerro las Tetas</h2>
-    <img src="" width="80%" height="30%">
+    <img src="191-3-10032_jpeg0-686a16205056a36_686a17ec-5056-a36a-08344ec5c4ec13b3.jpeg" width="80%" height="30%">
     <p class="text">
       Esta formación geológica, conocida entre los lugareños como las Tetas de Cayey por su parecido con un par de senos 
       que emergen del suelo, es una reserva natural designada y punto de acceso para los buscadores de aventuras. 
