--- a/S/Salinas/Salinas.html
+++ b/S/Salinas/Salinas.html
@@ -40,7 +40,7 @@
       </ul>
     </p>
     <h2>Albergue Olímpico Germán Rieckehoff</h2>
-    <img src="" width="80%" height="30%">
+    <img src="JV7L5WA4JFEORG4NLX3BWCL5RQ.jpeg" width="80%" height="30%">
     <p class="text">
       Este es el centro deportivo más grande de Puerto Rico y ofrece 40 instalaciones diferentes para una amplia gama de disciplinas, 
       desde fútbol hasta levantamiento de pesas y artes marciales. En verano se convierte en un parque acuático llamado Olímpico, con atracciones
