--- a/S/Salinas/Salinas.html
+++ b/S/Salinas/Salinas.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>La Curva del Árbol</h2>
-    <img src="" width="80%" height="30%">
+    <img src="maxresdefault.jpeg" width="80%" height="30%">
     <p class="text">
       Es un área para pasar un rato disfrutando de unas hermosas vistas hacia las Tetas de Cayey, la Cordillera Central y el Mar Caribe.
       Esta área es muy concurrida por personas que desean tirarse fotos en sus bancos, decorados con la bandera de Puerto Rico, o en su famoso 
