--- a/S/Salinas/Salinas.html
+++ b/S/Salinas/Salinas.html
@@ -54,7 +54,7 @@
       </ul>
     </p>
     <h2>Autódromo Internacional de Puerto Rico (Pista de Salinas) </h2>
-    <img src="" width="80%" height="30%">
+    <img src="salinas-speedway-aerial-view.jpeg" width="80%" height="30%">
     <p class="text">
       Para los fanáticos de las carreras de autos, la pista de carreras es algo que no deben perderse. 
       Allí, pueden ver varios eventos, incluyendo aceleración, 
