--- a/S/Salinas/Salinas.html
+++ b/S/Salinas/Salinas.html
@@ -22,8 +22,9 @@
       frio era sumamente notable.
     </p>
     <p>
+      Pueden visitar la curva del Árbol en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/s5iA8RNUGnAfVxCC8">3QMC+FM6, PR-1, Aibonito, Salinas 00705</a></li>
       </ul>
     </p>
     <h2>Cerro las Tetas</h2>
@@ -33,10 +34,10 @@
       que emergen del suelo, es una reserva natural designada y punto de acceso para los buscadores de aventuras. 
       Las montañas miden alrededor de 841 metros, y varias compañías locales ofrecen escalada en roca, caminatas y oportunidades de acampar. 
     </p>
-    Pueden visitar en:
+    Pueden visitar el Cerro las Tetas en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/U1BkCj2L8noJKiEEA">Salinas 00705</a></li>
       </ul>
     </p>
     <h2>Albergue Olímpico Germán Rieckehoff</h2>
@@ -48,9 +49,9 @@
       El Albergue Olímpico también tiene un museo olímpico que muestra los logros atléticos de los puertorriqueños. 
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Albergue Olímpico Germán Rieckehoff en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://g.page/albergueolimpico?share">PR-712 Km. 0.3, Salinas, 00751</a></li>
       </ul>
     </p>
     <h2>Autódromo Internacional de Puerto Rico (Pista de Salinas) </h2>
@@ -63,26 +64,26 @@
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/7gKLLJ1AVeRdX1cd6">PR-3, Salinas, 00751</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>El Dorado (787)-824-4455</li>
+    <li>La Barca (787)-824-2594</li>
+    <li>El Balcón del Capitán (787)-824-6210</li>
+    <li>La Barkita (787)-824-4918</li>
+    <li>Cha K Tiki Bar Restaurant (787)-436-7030</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Carnaval Abey - febrero</li>
+    <li>Fiesta del Pescao - junio</li>
+    <li>Fiestas Patronales Nuestra Señora de la Monserrate - Septiembre</li>
   </ul>
   </div>
 </body>
