--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -12,18 +12,22 @@
   <h2>Lugares turísticos en San Germán</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Museo Alfredo Ramírez de Arellano</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Este museo contiene colecciones de arte y objetos religiosos, incluidos retablos antiguos y vestimentas usadas por el 
+      primer cardenal de Puerto Rico. También se exhiben artefactos taínos y exhibiciones cambiantes de artistas locales e internacionales.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Museo de la Historia de San Germán (MHISA)</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Museo de la Historia de San Germán y El Museo de la Farmacia Domínguez albergan las mayores colecciones de historia y 
+      artefactos históricos de la ciudad de San Germán, al igual que de las farmacias o boticas del siglo XIX en Puerto Rico.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +35,13 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Ceiba de la Libertad</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Cuando no se tocan, los árboles de Ceiba pueden crecer y extender sus raíces durante cientos de años.
+      Un ejemplo muy grande y hermoso de eso está en San Germán, llamada la Ceiba de la Libertad. A este árbol centenario le 
+      quedan muchos años más para crecer, pero ya es una preciosidad! Puedes pararte entre sus enormes raíces y disfrutar de la 
+      sombra de sus ramas.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +49,11 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Charco El Pilón</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La cascada es agradable, tal vez de 30 pies de altura, y la piscina es cristalina y bonita. 
+      La piscina tiene solo unos 3 pies de profundidad, por lo que no parece que haya ningún lugar seguro para saltar/zambullirse en el agua.
     </p>
     <p>
       Pueden visitar en:
