--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -50,7 +50,7 @@
       </ul>
     </p>
     <h2>Charco El Pilón</h2>
-    <img src="" width="80%" height="30%">
+    <img src="charco-pilon-1.jpeg" width="80%" height="30%">
     <p class="text">
       La cascada es agradable, tal vez de 30 pies de altura, y la piscina es cristalina y bonita. 
       La piscina tiene solo unos 3 pies de profundidad, por lo que no parece que haya ningún lugar seguro para saltar/zambullirse en el agua.
