--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -24,7 +24,7 @@
       </ul>
     </p>
     <h2>Museo de la Historia de San Germán (MHISA)</h2>
-    <img src="" width="80%" height="30%">
+    <img src="foto MHISA.jpg.webp" width="80%" height="30%">
     <p class="text">
       El Museo de la Historia de San Germán y El Museo de la Farmacia Domínguez albergan las mayores colecciones de historia y 
       artefactos históricos de la ciudad de San Germán, al igual que de las farmacias o boticas del siglo XIX en Puerto Rico.
