--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -36,7 +36,7 @@
       </ul>
     </p>
     <h2>Ceiba de la Libertad</h2>
-    <img src="" width="80%" height="30%">
+    <img src="la-ceiba-de-la-libertad.jpg.webp" width="80%" height="30%">
     <p class="text">
       Cuando no se tocan, los árboles de Ceiba pueden crecer y extender sus raíces durante cientos de años.
       Un ejemplo muy grande y hermoso de eso está en San Germán, llamada la Ceiba de la Libertad. A este árbol centenario le 
