--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Museo Alfredo Ramírez de Arellano</h2>
-    <img src="" width="80%" height="30%">
+    <img src="mara-san-german-s-museum.jpeg" width="80%" height="30%">
     <p class="text">
       Este museo contiene colecciones de arte y objetos religiosos, incluidos retablos antiguos y vestimentas usadas por el 
       primer cardenal de Puerto Rico. También se exhiben artefactos taínos y exhibiciones cambiantes de artistas locales e internacionales.
