--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -20,7 +20,7 @@
     </p>
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/nQZqqd8WRqM4TKHg6">3XJ4+834, C. Lorencita Ramirez, San Germán, 00683</a></li>
       </ul>
     </p>
     <h2>Museo de la Historia de San Germán (MHISA)</h2>
@@ -32,7 +32,7 @@
     Pueden visitar en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://g.page/mhisapr?share">De la Cruz streets, C. Felix Arce Lugo, San Germán, 00683</a></li>
       </ul>
     </p>
     <h2>Ceiba de la Libertad</h2>
@@ -46,7 +46,7 @@
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/FZjb5SYnwMU16DMFA">3XM4+M9F, San Germán, 00683</a></li>
       </ul>
     </p>
     <h2>Charco El Pilón</h2>
@@ -58,7 +58,7 @@
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/sm2t6nThFDG3QaXZ6">42M5+HJ3, San Germán 00637</a></li>
       </ul>
     </p>
   </div>
@@ -76,8 +76,9 @@
   <div class="Eventos">
      <ul>
     <li>Festival del Anon - Septiembre</li>
-    <li></li>
-    <li></li>
+    <li>Festival de Navidad - Diciembre</li>
+    <li>Fiestas Patronales de San Germán Euserre - Julio</li>
+    <li>Maratón de Mujeres Puertorriqueñas - Diciembre</li>
   </ul>
   </div>
 </body>
