--- a/S/Salinas/Salinas.html
+++ b/S/Salinas/Salinas.html
@@ -62,7 +62,7 @@
       circuito para autos y lanchas y Go-Karts, en un ambiente seguro (pero emocionante).
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Autódromo Internacional de Puerto Rico (Pista de Salinas) en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/7gKLLJ1AVeRdX1cd6">PR-3, Salinas, 00751</a></li>
       </ul>
