--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -19,6 +19,7 @@
       primer cardenal de Puerto Rico. También se exhiben artefactos taínos y exhibiciones cambiantes de artistas locales e internacionales.
     </p>
     <p>
+      Pueden visitar el Museo Alfredo Ramírez de Arellano en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/nQZqqd8WRqM4TKHg6">3XJ4+834, C. Lorencita Ramirez, San Germán, 00683</a></li>
       </ul>
@@ -29,7 +30,7 @@
       El Museo de la Historia de San Germán y El Museo de la Farmacia Domínguez albergan las mayores colecciones de historia y 
       artefactos históricos de la ciudad de San Germán, al igual que de las farmacias o boticas del siglo XIX en Puerto Rico.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Museo de la Historia de San Germán (MHISA) en:
     <p>
       <ul>
         <li>Dirección: <a href="https://g.page/mhisapr?share">De la Cruz streets, C. Felix Arce Lugo, San Germán, 00683</a></li>
@@ -44,7 +45,7 @@
       sombra de sus ramas.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Ceiba de la Libertad en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/FZjb5SYnwMU16DMFA">3XM4+M9F, San Germán, 00683</a></li>
       </ul>
@@ -56,7 +57,7 @@
       La piscina tiene solo unos 3 pies de profundidad, por lo que no parece que haya ningún lugar seguro para saltar/zambullirse en el agua.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Charco El Pilón en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/sm2t6nThFDG3QaXZ6">42M5+HJ3, San Germán 00637</a></li>
       </ul>
@@ -65,11 +66,11 @@
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Pórticos 1606 (787)-978-3556</li>
+    <li>Mike's Steak House (787)-892-3581</li>
+    <li>Quarto's Pizza Bar & Rest. (787)-615-6387</li>
+    <li>La Casa Del Platano (787)-892-2633</li>
+    <li>Martin's Pizza (787)-892-5090</li>
   </ul>
   </div>
   <h2>Eventos</h2>
